Fix titles in renderCached Macro function